pa1a/src/decaf/frontend/Parser.output
   0  $accept : Program $end

   1  Program : ClassList

   2  ClassList : ClassList ClassDef
   3            | ClassDef

   4  VariableDef : Variable ';'

   5  Variable : Type IDENTIFIER

   6  Type : INT
   7       | VOID
   8       | BOOL
   9       | STRING
  10       | CLASS IDENTIFIER
  11       | Type '[' ']'

  12  ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}'
  13           | SEALED CLASS IDENTIFIER ExtendsClause '{' FieldList '}'

  14  ExtendsClause : EXTENDS IDENTIFIER
  15                |

  16  FieldList : FieldList VariableDef
  17            | FieldList FunctionDef
  18            |

  19  Formals : VariableList
  20          |

  21  VariableList : VariableList ',' Variable
  22               | Variable

  23  FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock
  24              | Type IDENTIFIER '(' Formals ')' StmtBlock

  25  StmtBlock : '{' StmtList '}'

  26  StmtList : StmtList Stmt
  27           |

  28  Stmt : VariableDef
  29       | SimpleStmt ';'
  30       | IfStmt
  31       | WhileStmt
  32       | ForStmt
  33       | ReturnStmt ';'
  34       | PrintStmt ';'
  35       | BreakStmt ';'
  36       | StmtBlock
  37       | SCOPY '(' IDENTIFIER ',' Expr ')' ';'
  38       | GuardStmt
  39       | ForEachStmt

  40  ForEachStmt : FOREACH '(' BoundVariable IN Expr ')' Stmt
  41              | FOREACH '(' BoundVariable IN Expr WHILE Expr ')' Stmt

  42  BoundVariable : Type IDENTIFIER
  43                | VAR IDENTIFIER

  44  GuardStmt : IF '{' GList '}'
  45            | IF '{' '}'

  46  GList : GList TRI_OR GuardedES
  47        | GuardedES

  48  GuardedES : Expr ':' Stmt

  49  SimpleStmt : LValue '=' Expr
  50             | Call
  51             |

  52  Receiver : Expr '.'
  53           |

  54  LValue : Receiver IDENTIFIER
  55         | Expr '[' Expr ']'
  56         | VAR IDENTIFIER

  57  Call : Receiver IDENTIFIER '(' Actuals ')'

  58  Expr : LValue
  59       | Call
  60       | Constant
  61       | Expr '+' Expr
  62       | Expr '-' Expr
  63       | Expr '*' Expr
  64       | Expr '/' Expr
  65       | Expr '%' Expr
  66       | Expr MOMO Expr
  67       | Expr PLPL Expr
  68       | Expr '[' Expr ']' DEFAULT Expr
  69       | Expr EQUAL Expr
  70       | Expr NOT_EQUAL Expr
  71       | Expr '<' Expr
  72       | Expr '>' Expr
  73       | Expr LESS_EQUAL Expr
  74       | Expr GREATER_EQUAL Expr
  75       | Expr AND Expr
  76       | Expr OR Expr
  77       | '(' Expr ')'
  78       | '-' Expr
  79       | '!' Expr
  80       | READ_INTEGER '(' ')'
  81       | READ_LINE '(' ')'
  82       | THIS
  83       | NEW IDENTIFIER '(' ')'
  84       | NEW Type '[' Expr ']'
  85       | INSTANCEOF '(' Expr ',' IDENTIFIER ')'
  86       | '(' CLASS IDENTIFIER ')' Expr
  87       | Expr '[' Expr ':' Expr ']'
  88       | '[' Expr FOR IDENTIFIER IN Expr ']'
  89       | '[' Expr FOR IDENTIFIER IN Expr IF Expr ']'

  90  Constant : LITERAL
  91           | NULL
  92           | '[' ConstList ']'
  93           | '[' ']'

  94  ConstList : ConstList ',' Constant
  95            | Constant

  96  Actuals : ExprList
  97          |

  98  ExprList : ExprList ',' Expr
  99           | Expr

 100  WhileStmt : WHILE '(' Expr ')' Stmt

 101  ForStmt : FOR '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt

 102  BreakStmt : BREAK

 103  IfStmt : IF '(' Expr ')' Stmt ElseClause

 104  ElseClause : ELSE Stmt
 105             |

 106  ReturnStmt : RETURN Expr
 107             | RETURN

 108  PrintStmt : PRINT '(' ExprList ')'

state 0
	$accept : . Program $end  (0)

	CLASS  shift 1
	SEALED  shift 2
	.  error

	Program  goto 3
	ClassList  goto 4
	ClassDef  goto 5


state 1
	ClassDef : CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (12)

	IDENTIFIER  shift 6
	.  error


state 2
	ClassDef : SEALED . CLASS IDENTIFIER ExtendsClause '{' FieldList '}'  (13)

	CLASS  shift 7
	.  error


state 3
	$accept : Program . $end  (0)

	$end  accept


state 4
	Program : ClassList .  (1)
	ClassList : ClassList . ClassDef  (2)

	CLASS  shift 1
	SEALED  shift 2
	$end  reduce 1

	ClassDef  goto 8


state 5
	ClassList : ClassDef .  (3)

	.  reduce 3


state 6
	ClassDef : CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (12)
	ExtendsClause : .  (15)

	EXTENDS  shift 9
	'{'  reduce 15

	ExtendsClause  goto 10


state 7
	ClassDef : SEALED CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (13)

	IDENTIFIER  shift 11
	.  error


state 8
	ClassList : ClassList ClassDef .  (2)

	.  reduce 2


state 9
	ExtendsClause : EXTENDS . IDENTIFIER  (14)

	IDENTIFIER  shift 12
	.  error


state 10
	ClassDef : CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (12)

	'{'  shift 13
	.  error


state 11
	ClassDef : SEALED CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (13)
	ExtendsClause : .  (15)

	EXTENDS  shift 9
	'{'  reduce 15

	ExtendsClause  goto 14


state 12
	ExtendsClause : EXTENDS IDENTIFIER .  (14)

	.  reduce 14


state 13
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (12)
	FieldList : .  (18)

	.  reduce 18

	FieldList  goto 15


state 14
	ClassDef : SEALED CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (13)

	'{'  shift 16
	.  error


state 15
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (12)
	FieldList : FieldList . VariableDef  (16)
	FieldList : FieldList . FunctionDef  (17)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	STATIC  shift 22
	'}'  shift 23
	.  error

	VariableDef  goto 24
	Variable  goto 25
	Type  goto 26
	FunctionDef  goto 27


state 16
	ClassDef : SEALED CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (13)
	FieldList : .  (18)

	.  reduce 18

	FieldList  goto 28


state 17
	Type : VOID .  (7)

	.  reduce 7


state 18
	Type : BOOL .  (8)

	.  reduce 8


state 19
	Type : INT .  (6)

	.  reduce 6


state 20
	Type : STRING .  (9)

	.  reduce 9


state 21
	Type : CLASS . IDENTIFIER  (10)

	IDENTIFIER  shift 29
	.  error


state 22
	FunctionDef : STATIC . Type IDENTIFIER '(' Formals ')' StmtBlock  (23)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	.  error

	Type  goto 30


state 23
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (12)

	.  reduce 12


state 24
	FieldList : FieldList VariableDef .  (16)

	.  reduce 16


state 25
	VariableDef : Variable . ';'  (4)

	';'  shift 31
	.  error


state 26
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)
	FunctionDef : Type . IDENTIFIER '(' Formals ')' StmtBlock  (24)

	IDENTIFIER  shift 32
	'['  shift 33
	.  error


state 27
	FieldList : FieldList FunctionDef .  (17)

	.  reduce 17


state 28
	ClassDef : SEALED CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (13)
	FieldList : FieldList . VariableDef  (16)
	FieldList : FieldList . FunctionDef  (17)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	STATIC  shift 22
	'}'  shift 34
	.  error

	VariableDef  goto 24
	Variable  goto 25
	Type  goto 26
	FunctionDef  goto 27


state 29
	Type : CLASS IDENTIFIER .  (10)

	.  reduce 10


state 30
	Type : Type . '[' ']'  (11)
	FunctionDef : STATIC Type . IDENTIFIER '(' Formals ')' StmtBlock  (23)

	IDENTIFIER  shift 35
	'['  shift 33
	.  error


state 31
	VariableDef : Variable ';' .  (4)

	.  reduce 4


state 32
	Variable : Type IDENTIFIER .  (5)
	FunctionDef : Type IDENTIFIER . '(' Formals ')' StmtBlock  (24)

	'('  shift 36
	';'  reduce 5


state 33
	Type : Type '[' . ']'  (11)

	']'  shift 37
	.  error


state 34
	ClassDef : SEALED CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (13)

	.  reduce 13


state 35
	FunctionDef : STATIC Type IDENTIFIER . '(' Formals ')' StmtBlock  (23)

	'('  shift 38
	.  error


state 36
	FunctionDef : Type IDENTIFIER '(' . Formals ')' StmtBlock  (24)
	Formals : .  (20)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	')'  reduce 20

	Variable  goto 39
	Type  goto 40
	Formals  goto 41
	VariableList  goto 42


state 37
	Type : Type '[' ']' .  (11)

	.  reduce 11


state 38
	FunctionDef : STATIC Type IDENTIFIER '(' . Formals ')' StmtBlock  (23)
	Formals : .  (20)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	')'  reduce 20

	Variable  goto 39
	Type  goto 40
	Formals  goto 43
	VariableList  goto 42


state 39
	VariableList : Variable .  (22)

	.  reduce 22


state 40
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)

	IDENTIFIER  shift 44
	'['  shift 33
	.  error


state 41
	FunctionDef : Type IDENTIFIER '(' Formals . ')' StmtBlock  (24)

	')'  shift 45
	.  error


state 42
	Formals : VariableList .  (19)
	VariableList : VariableList . ',' Variable  (21)

	','  shift 46
	')'  reduce 19


state 43
	FunctionDef : STATIC Type IDENTIFIER '(' Formals . ')' StmtBlock  (23)

	')'  shift 47
	.  error


state 44
	Variable : Type IDENTIFIER .  (5)

	.  reduce 5


state 45
	FunctionDef : Type IDENTIFIER '(' Formals ')' . StmtBlock  (24)

	'{'  shift 48
	.  error

	StmtBlock  goto 49


state 46
	VariableList : VariableList ',' . Variable  (21)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	.  error

	Variable  goto 50
	Type  goto 40


state 47
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' . StmtBlock  (23)

	'{'  shift 48
	.  error

	StmtBlock  goto 51


state 48
	StmtBlock : '{' . StmtList '}'  (25)
	StmtList : .  (27)

	.  reduce 27

	StmtList  goto 52


state 49
	FunctionDef : Type IDENTIFIER '(' Formals ')' StmtBlock .  (24)

	.  reduce 24


state 50
	VariableList : VariableList ',' Variable .  (21)

	.  reduce 21


state 51
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock .  (23)

	.  reduce 23


state 52
	StmtBlock : '{' StmtList . '}'  (25)
	StmtList : StmtList . Stmt  (26)
	SimpleStmt : .  (51)
	Receiver : .  (53)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	NULL  shift 53
	THIS  shift 54
	WHILE  shift 55
	FOR  shift 56
	IF  shift 57
	RETURN  shift 58
	BREAK  shift 59
	NEW  shift 60
	PRINT  shift 61
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	SCOPY  shift 66
	VAR  shift 67
	FOREACH  shift 68
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	'['  shift 72
	'{'  shift 48
	'}'  shift 73
	IDENTIFIER  reduce 53
	';'  reduce 51

	VariableDef  goto 74
	Variable  goto 25
	Type  goto 40
	StmtBlock  goto 75
	Stmt  goto 76
	SimpleStmt  goto 77
	IfStmt  goto 78
	WhileStmt  goto 79
	ForStmt  goto 80
	ReturnStmt  goto 81
	PrintStmt  goto 82
	BreakStmt  goto 83
	Expr  goto 84
	GuardStmt  goto 85
	ForEachStmt  goto 86
	LValue  goto 87
	Call  goto 88
	Receiver  goto 89
	Constant  goto 90


state 53
	Constant : NULL .  (91)

	.  reduce 91


state 54
	Expr : THIS .  (82)

	.  reduce 82


state 55
	WhileStmt : WHILE . '(' Expr ')' Stmt  (100)

	'('  shift 91
	.  error


state 56
	ForStmt : FOR . '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (101)

	'('  shift 92
	.  error


state 57
	GuardStmt : IF . '{' GList '}'  (44)
	GuardStmt : IF . '{' '}'  (45)
	IfStmt : IF . '(' Expr ')' Stmt ElseClause  (103)

	'('  shift 93
	'{'  shift 94
	.  error


state 58
	ReturnStmt : RETURN . Expr  (106)
	ReturnStmt : RETURN .  (107)
	Receiver : .  (53)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	VAR  shift 67
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	'['  shift 72
	IDENTIFIER  reduce 53
	';'  reduce 107

	Expr  goto 95
	LValue  goto 96
	Call  goto 97
	Receiver  goto 89
	Constant  goto 90


state 59
	BreakStmt : BREAK .  (102)

	.  reduce 102


state 60
	Expr : NEW . IDENTIFIER '(' ')'  (83)
	Expr : NEW . Type '[' Expr ']'  (84)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	IDENTIFIER  shift 98
	.  error

	Type  goto 99


state 61
	PrintStmt : PRINT . '(' ExprList ')'  (108)

	'('  shift 100
	.  error


state 62
	Expr : READ_INTEGER . '(' ')'  (80)

	'('  shift 101
	.  error


state 63
	Expr : READ_LINE . '(' ')'  (81)

	'('  shift 102
	.  error


state 64
	Constant : LITERAL .  (90)

	.  reduce 90


state 65
	Expr : INSTANCEOF . '(' Expr ',' IDENTIFIER ')'  (85)

	'('  shift 103
	.  error


state 66
	Stmt : SCOPY . '(' IDENTIFIER ',' Expr ')' ';'  (37)

	'('  shift 104
	.  error


state 67
	LValue : VAR . IDENTIFIER  (56)

	IDENTIFIER  shift 105
	.  error


state 68
	ForEachStmt : FOREACH . '(' BoundVariable IN Expr ')' Stmt  (40)
	ForEachStmt : FOREACH . '(' BoundVariable IN Expr WHILE Expr ')' Stmt  (41)

	'('  shift 106
	.  error


state 69
	Expr : '-' . Expr  (78)
	Receiver : .  (53)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	VAR  shift 67
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	'['  shift 72
	IDENTIFIER  reduce 53

	Expr  goto 107
	LValue  goto 96
	Call  goto 97
	Receiver  goto 89
	Constant  goto 90


state 70
	Expr : '!' . Expr  (79)
	Receiver : .  (53)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	VAR  shift 67
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	'['  shift 72
	IDENTIFIER  reduce 53

	Expr  goto 108
	LValue  goto 96
	Call  goto 97
	Receiver  goto 89
	Constant  goto 90


state 71
	Expr : '(' . Expr ')'  (77)
	Expr : '(' . CLASS IDENTIFIER ')' Expr  (86)
	Receiver : .  (53)

	CLASS  shift 109
	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	VAR  shift 67
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	'['  shift 72
	IDENTIFIER  reduce 53

	Expr  goto 110
	LValue  goto 96
	Call  goto 97
	Receiver  goto 89
	Constant  goto 90


state 72
	Expr : '[' . Expr FOR IDENTIFIER IN Expr ']'  (88)
	Expr : '[' . Expr FOR IDENTIFIER IN Expr IF Expr ']'  (89)
	Constant : '[' . ConstList ']'  (92)
	Constant : '[' . ']'  (93)
	Receiver : .  (53)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	VAR  shift 67
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	'['  shift 72
	']'  shift 111
	IDENTIFIER  reduce 53

	Expr  goto 112
	LValue  goto 96
	Call  goto 97
	Receiver  goto 89
	Constant  goto 113
	ConstList  goto 114


state 73
	StmtBlock : '{' StmtList '}' .  (25)

	.  reduce 25


state 74
	Stmt : VariableDef .  (28)

	.  reduce 28


state 75
	Stmt : StmtBlock .  (36)

	.  reduce 36


state 76
	StmtList : StmtList Stmt .  (26)

	.  reduce 26


state 77
	Stmt : SimpleStmt . ';'  (29)

	';'  shift 115
	.  error


state 78
	Stmt : IfStmt .  (30)

	.  reduce 30


state 79
	Stmt : WhileStmt .  (31)

	.  reduce 31


state 80
	Stmt : ForStmt .  (32)

	.  reduce 32


state 81
	Stmt : ReturnStmt . ';'  (33)

	';'  shift 116
	.  error


state 82
	Stmt : PrintStmt . ';'  (34)

	';'  shift 117
	.  error


state 83
	Stmt : BreakStmt . ';'  (35)

	';'  shift 118
	.  error


state 84
	Receiver : Expr . '.'  (52)
	LValue : Expr . '[' Expr ']'  (55)
	Expr : Expr . '+' Expr  (61)
	Expr : Expr . '-' Expr  (62)
	Expr : Expr . '*' Expr  (63)
	Expr : Expr . '/' Expr  (64)
	Expr : Expr . '%' Expr  (65)
	Expr : Expr . MOMO Expr  (66)
	Expr : Expr . PLPL Expr  (67)
	Expr : Expr . '[' Expr ']' DEFAULT Expr  (68)
	Expr : Expr . EQUAL Expr  (69)
	Expr : Expr . NOT_EQUAL Expr  (70)
	Expr : Expr . '<' Expr  (71)
	Expr : Expr . '>' Expr  (72)
	Expr : Expr . LESS_EQUAL Expr  (73)
	Expr : Expr . GREATER_EQUAL Expr  (74)
	Expr : Expr . AND Expr  (75)
	Expr : Expr . OR Expr  (76)
	Expr : Expr . '[' Expr ':' Expr ']'  (87)

	AND  shift 119
	OR  shift 120
	LESS_EQUAL  shift 121
	GREATER_EQUAL  shift 122
	EQUAL  shift 123
	NOT_EQUAL  shift 124
	MOMO  shift 125
	PLPL  shift 126
	'+'  shift 127
	'-'  shift 128
	'*'  shift 129
	'/'  shift 130
	'%'  shift 131
	'>'  shift 132
	'<'  shift 133
	'.'  shift 134
	'['  shift 135
	.  error


state 85
	Stmt : GuardStmt .  (38)

	.  reduce 38


state 86
	Stmt : ForEachStmt .  (39)

	.  reduce 39


state 87
	SimpleStmt : LValue . '=' Expr  (49)
	Expr : LValue .  (58)

	'='  shift 136
	AND  reduce 58
	OR  reduce 58
	LESS_EQUAL  reduce 58
	GREATER_EQUAL  reduce 58
	EQUAL  reduce 58
	NOT_EQUAL  reduce 58
	MOMO  reduce 58
	PLPL  reduce 58
	'+'  reduce 58
	'-'  reduce 58
	'*'  reduce 58
	'/'  reduce 58
	'%'  reduce 58
	'>'  reduce 58
	'<'  reduce 58
	'.'  reduce 58
	'['  reduce 58


state 88
	SimpleStmt : Call .  (50)
	Expr : Call .  (59)

	AND  reduce 59
	OR  reduce 59
	LESS_EQUAL  reduce 59
	GREATER_EQUAL  reduce 59
	EQUAL  reduce 59
	NOT_EQUAL  reduce 59
	MOMO  reduce 59
	PLPL  reduce 59
	'+'  reduce 59
	'-'  reduce 59
	'*'  reduce 59
	'/'  reduce 59
	'%'  reduce 59
	'>'  reduce 59
	'<'  reduce 59
	'.'  reduce 59
	';'  reduce 50
	')'  reduce 50
	'['  reduce 59


state 89
	LValue : Receiver . IDENTIFIER  (54)
	Call : Receiver . IDENTIFIER '(' Actuals ')'  (57)

	IDENTIFIER  shift 137
	.  error


state 90
	Expr : Constant .  (60)

	.  reduce 60


state 91
	WhileStmt : WHILE '(' . Expr ')' Stmt  (100)
	Receiver : .  (53)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	VAR  shift 67
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	'['  shift 72
	IDENTIFIER  reduce 53

	Expr  goto 138
	LValue  goto 96
	Call  goto 97
	Receiver  goto 89
	Constant  goto 90


state 92
	ForStmt : FOR '(' . SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (101)
	SimpleStmt : .  (51)
	Receiver : .  (53)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	VAR  shift 67
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	'['  shift 72
	IDENTIFIER  reduce 53
	';'  reduce 51

	SimpleStmt  goto 139
	Expr  goto 84
	LValue  goto 87
	Call  goto 88
	Receiver  goto 89
	Constant  goto 90


state 93
	IfStmt : IF '(' . Expr ')' Stmt ElseClause  (103)
	Receiver : .  (53)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	VAR  shift 67
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	'['  shift 72
	IDENTIFIER  reduce 53

	Expr  goto 140
	LValue  goto 96
	Call  goto 97
	Receiver  goto 89
	Constant  goto 90


state 94
	GuardStmt : IF '{' . GList '}'  (44)
	GuardStmt : IF '{' . '}'  (45)
	Receiver : .  (53)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	VAR  shift 67
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	'['  shift 72
	'}'  shift 141
	IDENTIFIER  reduce 53

	Expr  goto 142
	GList  goto 143
	GuardedES  goto 144
	LValue  goto 96
	Call  goto 97
	Receiver  goto 89
	Constant  goto 90


state 95
	Receiver : Expr . '.'  (52)
	LValue : Expr . '[' Expr ']'  (55)
	Expr : Expr . '+' Expr  (61)
	Expr : Expr . '-' Expr  (62)
	Expr : Expr . '*' Expr  (63)
	Expr : Expr . '/' Expr  (64)
	Expr : Expr . '%' Expr  (65)
	Expr : Expr . MOMO Expr  (66)
	Expr : Expr . PLPL Expr  (67)
	Expr : Expr . '[' Expr ']' DEFAULT Expr  (68)
	Expr : Expr . EQUAL Expr  (69)
	Expr : Expr . NOT_EQUAL Expr  (70)
	Expr : Expr . '<' Expr  (71)
	Expr : Expr . '>' Expr  (72)
	Expr : Expr . LESS_EQUAL Expr  (73)
	Expr : Expr . GREATER_EQUAL Expr  (74)
	Expr : Expr . AND Expr  (75)
	Expr : Expr . OR Expr  (76)
	Expr : Expr . '[' Expr ':' Expr ']'  (87)
	ReturnStmt : RETURN Expr .  (106)

	AND  shift 119
	OR  shift 120
	LESS_EQUAL  shift 121
	GREATER_EQUAL  shift 122
	EQUAL  shift 123
	NOT_EQUAL  shift 124
	MOMO  shift 125
	PLPL  shift 126
	'+'  shift 127
	'-'  shift 128
	'*'  shift 129
	'/'  shift 130
	'%'  shift 131
	'>'  shift 132
	'<'  shift 133
	'.'  shift 134
	'['  shift 135
	';'  reduce 106


state 96
	Expr : LValue .  (58)

	.  reduce 58


state 97
	Expr : Call .  (59)

	.  reduce 59


state 98
	Expr : NEW IDENTIFIER . '(' ')'  (83)

	'('  shift 145
	.  error


state 99
	Type : Type . '[' ']'  (11)
	Expr : NEW Type . '[' Expr ']'  (84)

	'['  shift 146
	.  error


state 100
	PrintStmt : PRINT '(' . ExprList ')'  (108)
	Receiver : .  (53)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	VAR  shift 67
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	'['  shift 72
	IDENTIFIER  reduce 53

	Expr  goto 147
	LValue  goto 96
	Call  goto 97
	Receiver  goto 89
	Constant  goto 90
	ExprList  goto 148


state 101
	Expr : READ_INTEGER '(' . ')'  (80)

	')'  shift 149
	.  error


state 102
	Expr : READ_LINE '(' . ')'  (81)

	')'  shift 150
	.  error


state 103
	Expr : INSTANCEOF '(' . Expr ',' IDENTIFIER ')'  (85)
	Receiver : .  (53)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	VAR  shift 67
	'-'  shift 69
	'!'  shift 70
	'('  shift 71
	'['  shift 72
	IDENTIFIER  reduce 53

	Expr  goto 151
	LValue  goto 96
	Call  goto 97
	Receiver  goto 89
	Constant  goto 90


state 104
	Stmt : SCOPY '(' . IDENTIFIER ',' Expr ')' ';'  (37)

	IDENTIFIER  shift 152
	.  error


state 105
	LValue : VAR IDENTIFIER .  (56)

	.  reduce 56


state 106
	ForEachStmt : FOREACH '(' . BoundVariable IN Expr ')' Stmt  (40)
	ForEachStmt : FOREACH '(' . BoundVariable IN Expr WHILE Expr ')' Stmt  (41)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	VAR  shift 153
	.  error

	Type  goto 154
	BoundVariable  goto 155


state 107
	Receiver : Expr . '.'  (52)
	LValue : Expr . '[' Expr ']'  (55)
	Expr : Expr . '+' Expr  (61)
	Expr : Expr . '-' Expr  (62)
	Expr : Expr . '*' Expr  (63)
	Expr : Expr . '/' Expr  (64)
	Expr : Expr . '%' Expr  (65)
	Expr : Expr . MOMO Expr  (66)
	Expr : Expr . PLPL Expr  (67)
	Expr : Expr . '[' Expr ']' DEFAULT Expr  (68)
	Expr : Expr . EQUAL Expr  (69)
	Expr : Expr . NOT_EQUAL Expr  (70)
	Expr : Expr . '<' Expr  (71)
	Expr : Expr . '>' Expr  (72)
	Expr : Expr . LESS_EQUAL Expr  (73)
	Expr : Expr . GREATER_EQUAL Expr  (74)
	Expr : Expr . AND Expr  (75)
	Expr : Expr . OR Expr  (76)
	Expr : '-' Expr .  (78)
	Expr : Expr . '[' Expr ':' Expr ']'  (87)

	'.'  shift 134
	'['  shift 135
	WHILE  reduce 78
	FOR  reduce 78
	IF  reduce 78
	AND  reduce 78
	OR  reduce 78
	LESS_EQUAL  reduce 78
	GREATER_EQUAL  reduce 78
	EQUAL  reduce 78
	NOT_EQUAL  reduce 78
	MOMO  reduce 78
	PLPL  reduce 78
	'+'  reduce 78
	'-'  reduce 78
	'*'  reduce 78
	'/'  reduce 78
	'%'  reduce 78
	'>'  reduce 78
	'<'  reduce 78
	','  reduce 78
	';'  reduce 78
	')'  reduce 78
	']'  reduce 78
	':'  reduce 78


state 108
	Receiver : Expr . '.'  (52)
	LValue : Expr . '[' Expr ']'  (55)
	Expr : Expr . '+' Expr  (61)
	Expr : Expr . '-' Expr  (62)
	Expr : Expr . '*' Expr  (63)
	Expr : Expr . '/' Expr  (64)
	Expr : Expr . '%' Expr  (65)
	Expr : Expr . MOMO Expr  (66)
	Expr : Expr . PLPL Expr  (67)
	Expr : Expr . '[' Expr ']' DEFAULT Expr  (68)
	Expr : Expr . EQUAL Expr  (69)
	Expr : Expr . NOT_EQUAL Expr  (70)
	Expr : Expr . '<' Expr  (71)
	Expr : Expr . '>' Expr  (72)
	Expr : Expr . LESS_EQUAL Expr  (73)
	Expr : Expr . GREATER_EQUAL Expr  (74)
	Expr : Expr . AND Expr  (75)
	Expr : Expr . OR Expr  (76)
	Expr : '!' Expr .  (79)
	Expr : Expr . '[' Expr ':' Expr ']'  (87)

	'.'  shift 134
	'['  shift 135
	WHILE  reduce 79
	FOR  reduce 79
	IF  reduce 79
	AND  reduce 79
	OR  reduce 79
	LESS_EQUAL  reduce 79
	GREATER_EQUAL  reduce 79
	EQUAL  reduce 79
	NOT_EQUAL  reduce 79
	MOMO  reduce 79
	PLPL  reduce 79
	'+'  reduce 79
	'-'  reduce 79
	'*'  reduce 79
	'/'  reduce 79
	'%'  reduce 79
	'>'  reduce 79
	'<'  reduce 79
	','  reduce 79
	';'  reduce 79
	')'  reduce 79
	']'  reduce 79
	':'  reduce 79


state 109
	Expr : '(' CLASS . IDENTIFIER ')' Expr  (86)

	IDENTIFIER  shift 156
	.  error

